// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engagement-activity buildHistoryData should return an array formatted for use in a chart 1`] = `
Array [
  Object {
    "axis": "y",
    "data": Array [
      5,
      10,
    ],
    "id": "activities",
    "name": "Activity Count",
    "type": "bar",
  },
  Object {
    "axis": "y2",
    "data": Array [
      2,
      4,
    ],
    "id": "engagements",
    "name": "Engagement Score",
    "type": "spline",
  },
  Object {
    "data": Array [
      1531263666366,
      1531350066366,
    ],
    "id": "date",
    "name": "Date",
  },
]
`;

exports[`engagement-activity buildLegendItems should return a fallback display configuration for engagementScore 1`] = `
Array [
  Object {
    "change": 20,
    "id": "activities",
    "secondaryInfo": "30 Day Change",
    "title": "Total Activity Count: 10",
  },
  Object {
    "change": 30,
    "id": "engagements",
    "secondaryInfo": "30 Day Change",
    "title": "Engagement Score: --",
  },
]
`;

exports[`engagement-activity buildLegendItems should return an array formatted for use as items in ChangeLegend 1`] = `
Array [
  Object {
    "change": 20,
    "id": "activities",
    "secondaryInfo": "30 Day Change",
    "title": "Total Activity Count: 10",
  },
  Object {
    "change": 30,
    "id": "engagements",
    "secondaryInfo": "30 Day Change",
    "title": "Engagement Score: 4.00/10",
  },
]
`;

exports[`engagement-activity formatTickVal should return a given date with the format M/D 1`] = `"7/10"`;

exports[`engagement-activity renderTooltipToString should render 1`] = `"<div class=\\"chart-tooltip-root\\" data-reactroot=\\"\\"><div class=\\"header\\"><div class=\\"title\\">July 8, 2018</div></div><div class=\\"divider\\"></div><div class=\\"contents\\"><div>Activity<b>10</b></div><div>Engagement Score<b>2.10</b></div></div></div>"`;
